Code cleanup and refactoring.
Using layout inflate for view resuse.